# stock_middle_platform_backend

./: .env  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SWAGGER_GUIDE.md  SWAGGER_INTEGRATION_SUMMARY.md  agents.md  docker-compose.yml  env.example  requirements.txt  run.py  start.bat  start.sh  start_swagger.py  test_api.py  test_swagger.py  test_swagger_complete.py  uvicorn_config.py
stock-system/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
stock-system/app/: config.py  main.py
stock-system/app/api/: deps.py  routes_fundamentals.py  routes_health.py  routes_indicators.py  routes_positions.py  routes_signals.py  routes_stocks.py  routes_tasks.py  routes_webhook_jq.py
stock-system/app/datasource/: akshare_adapter.py  baostock_adapter.py  base.py
stock-system/app/indicators/: __init__.py  atr.py  base.py  boll.py  ma.py  macd.py  rsi.py
stock-system/app/scheduler/: cli.py  jobs.py
stock-system/app/service/: data_refresh_service.py  fundamentals_service.py  indicator_service.py  jq_bridge_service.py  mail_service.py  rebalance_service.py
stock-system/app/utils/: logging.py  pagination.py  security.py  timeutils.py
stock-system/fastapi/: __init__.py
stock-system/fastapi/security/: __init__.py
stock-system/fastapi/testclient/: __init__.py
stock-system/scripts/: bootstrap_dev.sh  create_indexes.py  seed_demo_data.py
stock-system/tests/: conftest.py  test_api_custom_indicator.py  test_api_health.py  test_api_kline.py  test_indicator_ma.py  test_positions_current.py  test_webhook_jq_signal.py
(+91 files in other folders)
